monitoring/logs/schwabot_install.log
2025-07-04 05:24:12,420 - INFO - ============================================================
2025-07-04 05:25:11,894 - INFO - Starting Schwabot Advanced Strategy System Installation
2025-07-04 05:25:11,895 - INFO - ============================================================
2025-07-04 05:25:11,895 - INFO - 
System Requirements Check...
2025-07-04 05:25:11,895 - INFO - Checking system requirements...
2025-07-04 05:25:11,896 - INFO - Python 3.12.10
2025-07-04 05:25:12,412 - INFO - Pip available: pip 25.1.1 from C:\Users\maxde\AppData\Local\Programs\Python\Python312\Lib\site-packages\pip (python 3.12)
2025-07-04 05:25:12,413 - INFO - System Requirements Check completed
2025-07-04 05:25:12,413 - INFO - 
Virtual Environment Creation...
2025-07-04 05:25:12,413 - INFO - Creating virtual environment...
2025-07-04 05:25:12,414 - INFO - Virtual environment already exists, removing...
2025-07-04 05:25:23,673 - INFO - Virtual environment created: C:\Users\maxde\Downloads\clonerepo\AOI_Base_Files_Schwabot\schwabot_env
2025-07-04 05:25:23,673 - INFO - Virtual Environment Creation completed
2025-07-04 05:25:23,673 - INFO - 
Pip Upgrade...
2025-07-04 05:25:23,673 - INFO - Upgrading pip...
2025-07-04 05:25:27,726 - ERROR - Failed to upgrade pip: Command '['C:\\Users\\maxde\\Downloads\\clonerepo\\AOI_Base_Files_Schwabot\\schwabot_env\\Scripts\\pip.exe', 'install', '--upgrade', 'pip']' returned non-zero exit status 1.
2025-07-04 05:25:27,726 - ERROR - Installation failed at: Pip Upgrade
2025-07-04 05:27:08,742 - INFO - Starting Schwabot Advanced Strategy System Installation
2025-07-04 05:27:08,742 - INFO - ============================================================
2025-07-04 05:27:08,742 - INFO - 
System Requirements Check...
2025-07-04 05:27:08,743 - INFO - Checking system requirements...
2025-07-04 05:27:08,743 - INFO - Python 3.12.10
2025-07-04 05:27:09,329 - INFO - Pip available: pip 25.1.1 from C:\Users\maxde\AppData\Local\Programs\Python\Python312\Lib\site-packages\pip (python 3.12)
2025-07-04 05:27:09,329 - INFO - System Requirements Check completed
2025-07-04 05:27:09,330 - INFO - 
Virtual Environment Creation...
2025-07-04 05:27:09,330 - INFO - Creating virtual environment...
2025-07-04 05:27:09,330 - INFO - Virtual environment already exists, removing...
2025-07-04 05:27:20,399 - INFO - Virtual environment created: C:\Users\maxde\Downloads\clonerepo\AOI_Base_Files_Schwabot\schwabot_env
2025-07-04 05:27:20,399 - INFO - Virtual Environment Creation completed
2025-07-04 05:27:20,399 - INFO - 
Pip Upgrade...
2025-07-04 05:27:20,400 - INFO - Upgrading pip...
2025-07-04 05:27:32,369 - INFO - Pip upgraded successfully
2025-07-04 05:27:32,370 - INFO - Pip Upgrade completed
2025-07-04 05:27:32,370 - INFO - 
Core Dependencies Installation...
2025-07-04 05:27:32,370 - INFO - Installing core dependencies...
2025-07-04 05:27:32,371 - INFO - Installing numpy>=1.21.0...
2025-07-04 05:27:47,827 - INFO - Installing pandas>=1.3.0...
2025-07-04 05:28:20,928 - INFO - Installing scipy>=1.7.0...
2025-07-04 05:28:50,930 - INFO - Installing requests>=2.25.0...
2025-07-04 05:28:56,180 - INFO - Installing aiohttp>=3.8.0...
2025-07-04 05:29:06,850 - INFO - Installing websockets>=10.0...
2025-07-04 05:29:10,619 - INFO - Installing ccxt>=2.0.0...
2025-07-04 05:29:46,638 - INFO - Installing scikit-learn>=1.0.0...
2025-07-04 05:30:05,542 - INFO - Installing matplotlib>=3.5.0...
2025-07-04 05:30:31,272 - INFO - Installing seaborn>=0.11.0...
2025-07-04 05:30:34,759 - INFO - Installing pyyaml>=6.0...
2025-07-04 05:30:37,983 - INFO - Installing jsonschema>=4.0.0...
2025-07-04 05:30:42,760 - INFO - Installing structlog>=21.5.0...
2025-07-04 05:30:45,498 - INFO - Installing click>=8.0.0...
2025-07-04 05:30:48,714 - INFO - Installing sympy>=1.10.0...
2025-07-04 05:31:29,445 - INFO - Installing numba>=0.56.0...
2025-07-04 05:32:04,426 - INFO - Installing Flask==2.3.3...
2025-07-04 05:32:10,097 - INFO - Installing Flask-CORS==4.0.0...
2025-07-04 05:32:12,768 - INFO - Installing python-dotenv==1.0.0...
2025-07-04 05:32:15,627 - INFO - Installing gunicorn==21.2.0...
2025-07-04 05:32:19,034 - INFO - Installing Werkzeug==2.3.7...
2025-07-04 05:32:23,771 - INFO - Core dependencies installed successfully
2025-07-04 05:32:23,771 - INFO - Core Dependencies Installation completed
2025-07-04 05:32:23,771 - INFO - 
Development Dependencies Installation...
2025-07-04 05:32:23,772 - INFO - Installing development dependencies...
2025-07-04 05:32:23,772 - INFO - Installing pytest>=6.2.0...
2025-07-04 05:32:37,696 - INFO - Installing pytest-asyncio>=0.18.0...
2025-07-04 05:32:40,294 - INFO - Installing pytest-cov>=3.0.0...
2025-07-04 05:32:45,069 - INFO - Installing flake8>=4.0.0...
2025-07-04 05:32:49,619 - INFO - Installing black>=22.0.0...
2025-07-04 05:32:54,978 - INFO - Installing mypy>=0.950...
2025-07-04 05:33:06,795 - INFO - Installing isort>=5.10.0...
2025-07-04 05:33:09,976 - INFO - Installing types-requests>=2.28.0...
2025-07-04 05:33:12,490 - INFO - Installing types-PyYAML>=6.0.0...
2025-07-04 05:33:14,993 - INFO - Development dependencies installed successfully
2025-07-04 05:33:14,993 - INFO - Development Dependencies Installation completed
2025-07-04 05:33:14,993 - INFO - 
Directory Creation...
2025-07-04 05:33:14,994 - INFO - Creating directories...
2025-07-04 05:33:14,994 - INFO - Created directory: data
2025-07-04 05:33:14,995 - INFO - Created directory: logs
2025-07-04 05:33:14,995 - INFO - Created directory: config
2025-07-04 05:33:14,996 - INFO - Created directory: cache
2025-07-04 05:33:14,997 - INFO - Created directory: backups
2025-07-04 05:33:14,998 - INFO - Created directory: reports
2025-07-04 05:33:14,998 - INFO - Directory Creation completed
2025-07-04 05:33:14,998 - INFO - 
Configuration Setup...
2025-07-04 05:33:14,999 - INFO - Creating configuration files...
2025-07-04 05:33:15,000 - INFO - Configuration file created
2025-07-04 05:33:15,000 - INFO - Configuration Setup completed
2025-07-04 05:33:15,000 - INFO - 
Launcher Scripts Creation...
2025-07-04 05:33:15,001 - INFO - Creating launcher scripts...
2025-07-04 05:33:15,002 - INFO - Windows launcher created: start_schwabot.bat
2025-07-04 05:33:15,003 - INFO - Unix launcher created: start_schwabot.sh
2025-07-04 05:33:15,003 - INFO - Launcher Scripts Creation completed
2025-07-04 05:33:15,003 - INFO - 
Activation Script Creation...
2025-07-04 05:33:15,004 - INFO - Creating activation script...
2025-07-04 05:33:15,005 - INFO - Windows activation script created: activate_schwabot.bat
2025-07-04 05:33:15,005 - INFO - Activation Script Creation completed
2025-07-04 05:33:15,005 - INFO - 
System Tests...
2025-07-04 05:33:15,006 - INFO - Running system tests...
2025-07-04 05:33:15,064 - ERROR - System tests failed:   File "<string>", line 4
    sys.path.insert(0, 'C:\Users\maxde\Downloads\clonerepo\AOI_Base_Files_Schwabot')
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape

2025-07-04 05:33:15,065 - ERROR - Installation failed at: System Tests
